--- a/Занятие3/Лабораторные_задания/task1_2/task-info.yaml
+++ b/Занятие3/Лабораторные_задания/task1_2/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 45
-    length: 35
+  - offset: 167
+    length: 30
     placeholder_text: '...  # TODO записать лесенку в файл'
     initial_state:
       length: 35
       offset: 45
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       with open(OUTPUT_FILE, "w") as f:
               for count_asterisk in range(1, 11):
@@ -62,5 +62,8 @@ files:
      *********
     **********
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 07 Dec 2022 17:41:17 UTC
 record: -1
