--- a/Занятие3/Лабораторные_задания/task1_4/task-info.yaml
+++ b/Занятие3/Лабораторные_задания/task1_4/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 70
-    length: 57
+  - offset: 250
+    length: 53
     placeholder_text: '...  # TODO перезаписать содержимое одного файла в другой'
     initial_state:
       length: 57
       offset: 70
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       with open(INPUT_FILE, "r") as input_file:
               with open(OUTPUT_FILE, "w") as output_file:
@@ -63,5 +63,8 @@ files:
     TURQUOISE
     CYAN
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 08 Dec 2022 09:17:18 UTC
 record: -1
