--- a/Занятие3/Лабораторные_задания/task2_3/task-info.yaml
+++ b/Занятие3/Лабораторные_задания/task2_3/task-info.yaml
@@ -3,7 +3,7 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 58
+  - offset: 173
     length: 36
     placeholder_text: '# TODO считать содержимое JSON файла'
     initial_state:
@@ -11,19 +11,19 @@ files:
       offset: 58
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       with open(filename) as f:
               json_data = json.load(f)
-  - offset: 107
-    length: 53
+  - offset: 231
+    length: 49
     placeholder_text: '...  # TODO найти максимальный элемент по ключу score'
     initial_state:
       length: 53
       offset: 107
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 'max(json_data, key=lambda item: item["score"])'
   text: |
     import json
@@ -50,5 +50,8 @@ files:
 - name: input.json
   visible: true
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 08 Dec 2022 13:07:29 UTC
 record: -1
