--- a/Занятие3/Лабораторные_задания/task2_4/task-info.yaml
+++ b/Занятие3/Лабораторные_задания/task2_4/task-info.yaml
@@ -3,20 +3,20 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 58
-    length: 36
+  - offset: 114
+    length: 41
     placeholder_text: '# TODO считать содержимое JSON файла'
     initial_state:
       length: 36
       offset: 58
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       with open(filename) as f:
               json_data = json.load(f)
-  - offset: 110
-    length: 100
+  - offset: 225
+    length: 96
     placeholder_text: '...  # TODO записать выражение-генератор возвращающее значение
       по ключу contains_improvement_appeals'
     initial_state:
@@ -24,7 +24,7 @@ files:
       offset: 110
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: (item["contains_improvement_appeals"] for item in json_data)
   text: |
     import json
@@ -52,5 +52,8 @@ files:
 - name: input.json
   visible: true
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 08 Dec 2022 13:42:28 UTC
 record: -1
